Abort any covers being fetched for an album if one is set manually

BUG: 236839